<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>


    <string name="app_name">MyFood</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="confirm_shop">确定购买</string>
    <string name="main_fragment">点单</string>
    <string name="ordered_fragment">我的订单</string>
    <string name="board_fragment">留言板</string>
    <string name="boars_send">留言</string>
    <string name="internet_failed">网络连接失败</string>
    <string name="no_more">没有更多了哦</string>
    <string name="load_more">显示余下20条</string>
    <string name="loading_more"> 正在加载...</string>
    <string name="loading_more_failed">加载失败</string>
    <string name="load_failed">网络异常</string>
    <string name="internet_connection_failed_please_check">网络不给力，请检查网络</string>
    <string name="pull_to_retry">下拉刷新重试</string>
    <string name="back_to_main_pull_to_retry">请返回主界面下拉刷新重试</string>
    <string name="advice_to_myfood_app">对MyFood应用的建议</string>
    <string name="check_for_update">检查更新</string>
    <string name="need_update_to_use">需要更新才能使用</string>
    <string name="check_update_failed">检测更新失败</string>
    <string name="check_internet">请检查网络连接</string>
    <string name="dont_need_update_to_use">不需要更新</string>
    <string name="ensure">确定 </string>
    <string name="checking_update"> 正在检查更新</string>
    <string name="please_wait"> 请稍等</string>
    <string name="find_new_version"> 检测到新版本</string>
    <string name="dont_find_new_version">您使用的是最新版</string>
    <string name="go_to_update">前往更新</string>
    <string name="version_name">MyFood   版本号:</string>
    <string name="phone_number">餐厅电话：0575-86047316</string>
    <string name="addr">餐厅地址：城关镇新叶小区7幢5号</string>
    <string name="made_information">Coded by LvKang , 2015.5-2015.6</string>
    <string name="contact_information">微信号：zjxckangkang</string>
    <string name="about_activity_introduction">关于</string>
    <string name="reply_activity_introduction">查看评论</string>
    <string name="shop_activity_introduction">确认购买</string>

</resources>